force-app/main/default/objects/CWS_User_email__mdt/CWS_User_email__mdt.object-meta.xml
<CustomObject>
    <label>CWS User email</label>
    <pluralLabel>CWS User emails</pluralLabel>
</CustomObject>