force-app/main/default/objects/CWS_User_email__mdt/fields/User_2_Email__c.field-meta.xml
<CustomField>
    <fullName>User_2_Email__c</fullName>
    <label>User 2 Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>