force-app/main/default/objects/CWS_User_email__mdt/fields/User_3_Email__c.field-meta.xml
<CustomField>
    <fullName>User_3_Email__c</fullName>
    <label>User 3 Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>